[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/backgrounds/empac_stage.jpg" type="Texture" id=1]
[ext_resource path="res://levels/TrainingLevel.gd" type="Script" id=2]
[ext_resource path="res://assets/reers2.png" type="Texture" id=3]
[ext_resource path="res://assets/reers.png" type="Texture" id=4]
[ext_resource path="res://levels/Enemy.gd" type="Script" id=5]
[ext_resource path="res://actors/Player.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 511, 35.5 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 108.0
height = 68.0

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 83.375, 17.25 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "shake"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, -5.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.580392, 0.580392, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TrainingLevel" type="Node2D"]
script = ExtResource( 2 )
Player1 = ExtResource( 6 )

[node name="EmpacStageBG" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = -85.0
margin_right = 1028.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Floor" type="Node2D" parent="."]
position = Vector2( 2, 598 )

[node name="StaticBody2D" type="StaticBody2D" parent="Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/StaticBody2D"]
position = Vector2( 514, 19 )
shape = SubResource( 8 )

[node name="FloatingAaronHead" type="StaticBody2D" parent="."]
position = Vector2( 921, 89 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloatingAaronHead"]
position = Vector2( 0, 7.62939e-06 )
shape = SubResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="FloatingAaronHead"]
position = Vector2( -3, 6 )
scale = Vector2( 0.465447, 0.465447 )
frames = SubResource( 9 )
playing = true

[node name="HitArea" type="Area2D" parent="FloatingAaronHead"]

[node name="HitCollider" type="CollisionShape2D" parent="FloatingAaronHead/HitArea"]
position = Vector2( 0, 137 )
shape = SubResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FloatingAaronHead"]
anims/RESET = SubResource( 12 )
anims/shake = SubResource( 13 )

[node name="Player1StartPos" type="Position2D" parent="."]
position = Vector2( 78, 410 )

[node name="Player1HealthBar" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = 40.0
color = Color( 0.0745098, 0.6, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2HealthBar" type="ColorRect" parent="."]
margin_left = 916.0
margin_top = 20.0
margin_right = 1016.0
margin_bottom = 40.0
grow_horizontal = 0
color = Color( 0.0745098, 0.6, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="FloatingAaronHead/HitArea" to="FloatingAaronHead" method="_on_HitArea_body_entered"]
